Development in process

--- a/app/src/main/resources/templates/bookadded.html
+++ b/app/src/main/resources/templates/bookadded.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library Web</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
     <section class="header">
       <nav>
         <a href="index.html"
-          ><img src="images/header.png" alt="Library Web" />
+          ><img src="../static/images/header.png" alt="Library Web" />
         </a>
 
         <div class="verticalLine">
@@ -30,22 +30,11 @@
       </nav>
     </section>
 
-    <section class="context">
-      <img
-        src="images/library.png"
-        alt="Library and great educational atmosphere"
-      />
-      <div>
-        <p>
-          “A reader lives a thousand lives before he dies . . . The man who
-          never reads lives only one.” George R.R. Martin
-        </p>
-        <input type="Search" />
-        <a href="searchresult.html"
-          ><button type="button" class="btn btn-outline-primary">
-            Search
-          </button></a
-        >
+    <section class="addBook">
+      <h1 class="searchResultHeader">Add Book</h1>
+      <div class="searchVerticalLine"><p></p></div>
+      <div class="bookAddedPannel">
+        <h2>Book Added, Congratulations!</h2>
       </div>
     </section>
 
