--- a/app/src/main/resources/templates/history.html
+++ b/app/src/main/resources/templates/history.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library Web</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
     <section class="header">
       <nav>
         <a href="index.html"
-          ><img src="images/header.png" alt="Library Web" />
+          ><img src="../static/images/header.png" alt="Library Web" />
         </a>
 
         <div class="verticalLine">
@@ -36,7 +36,7 @@
       
       <div class="card">
         <div class="image">
-            <img src="images/littleprince.jpg">
+            <img src="../static/images/littleprince.jpg">
         </div>
         <div class="title">
             <h1>The Little King</h1>
