--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -1,60 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Library Web</title>
-    <link rel="stylesheet" href="../static/style.css" />
-  </head>
+    <link rel="stylesheet" href="../static/style.css"/>
+    <link rel="stylesheet" th:href="@{resources/static/style.css}" >
+</head>
 
-  <body>
-    <hr class="hr_upper_page" />
+<body>
+<hr class="hr_upper_page"/>
 
-    <section class="header">
-      <nav>
+<section class="header">
+    <nav>
         <a href="index.html"
-          ><img src="../static/images/header.png" alt="Library Web" />
+        ><img src="../static/images/header.png" alt="Library Web"/>
         </a>
 
         <div class="verticalLine">
-          <p></p>
+            <p></p>
         </div>
 
         <div class="nav-links">
-          <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="login.html">LOG IN</a></li>
-          </ul>
+            <ul>
+                <li><a th:href="@{index.html}">HOME</a></li>
+                <li><a th:href="login.html">LOG IN</a></li>
+            </ul>
         </div>
-      </nav>
-    </section>
+    </nav>
+</section>
 
-    <section class="context">
-      <img
-        src="../static/images/library.png"
-        alt="Library and great educational atmosphere"
-      />
-      <div>
+<section class="context">
+    <img
+            src="../static/images/library.png"
+            alt="Library and great educational atmosphere"
+    />
+    <div>
         <p>
-          “A reader lives a thousand lives before he dies . . . The man who
-          never reads lives only one.” George R.R. Martin
+            “A reader lives a thousand lives before he dies . . . The man who
+            never reads lives only one.” George R.R. Martin
         </p>
-        <input type="Search" />
-        <a href="books.html"
-          ><button type="button" class="btn btn-outline-primary">
-            Search
-          </button></a
-        >
-      </div>
-    </section>
+        <input type="button" value="All Books" onclick="AllBooks()">
+        <!--        <input type="Search" />-->
+        <!--        <a href="books.html">-->
+        <!--          <button type="button" class="btn btn-outline-primary">-->
+        <!--            Search-->
+        <!--          </button></a-->
+        <!--        >-->
 
-    <section class="footer">
-      <ul>
+        <div>&nbsp;</div>
+
+          <form th:action="@{/books/search}">
+              Search:
+              <input type="text" name="keyword" th:value="${keyword}" />
+              &nbsp;
+              <input type="submit" value="Search">
+          </form>
+
+    </div>
+</section>
+
+<section class="footer">
+    <ul>
         <li><a href="https://facebook.com">Find Us Online</a></li>
         <li><p>Phone: +374 99 999999</p></li>
         <li><p>Email:ouremail@gmail.com</p></li>
-      </ul>
-    </section>
-  </body>
+    </ul>
+</section>
+<script type="text/javascript">
+    function AllBooks(){
+        window.location= '/books';
+    }
+</script>
+</body>
 </html>
