--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -15,13 +15,9 @@
 
 <section class="header">
     <nav>
-        <a href="index.html"
-        ><img src="../static/images/header.png" alt="Library Web"/>
+        <a href="index.html">
+            <img src="../static/images/header.png" alt="Library Web"/>
         </a>
-
-        <!--        <div class="verticalLine">-->
-        <!--            <p></p>-->
-        <!--        </div>-->
 
         <div class="nav-links">
             <ul>
@@ -36,37 +32,28 @@
 
     <div class="container">
         <div class="row">
-            <h1> Books </h1>
+            <h1> Book Search Results </h1>
+            <input type="button" value="Clear" onclick="clearSearch()">
         </div>
         <table class="table table-bordered">
             <thead class="table-dark">
             <tr>
-                <th> Title </th>
-                <th> Description </th>
+                <th> Title</th>
+                <th> Description</th>
                 <!--                <th> Authors </th>-->
-                <th> Status </th>
+                <th> Status</th>
                 <th> Actions </th>
             </tr>
             </thead>
 
             <tbody>
             <tr th:if="${books.isEmpty()}">
-                <td colspan="2"> No Books In The Library</td>
+                <td colspan="2"> No Books Found</td>
             </tr>
             <tr th:each="book: ${books}">
                 <td th:text="${book.title}"></td>
                 <td th:text="${book.description}"></td>
-                <!--                <td>-->
-                <!--                    <table>-->
-                <!--                        <tr>-->
-                <!--                            <th> Name </th>-->
-                <!--                        </tr>-->
-                <!--                        <tr th:each="author: ${book.authors}">-->
-                <!--                            <td th:text="${author.firstName}"></td>-->
-                <!--                        </tr>-->
-                <!--                    </table>-->
-                <!--                </td>-->
-                <td th:text="${status_available} ? 'Available' : 'Not Available'"></td>
+                <td th:text="${book.statusAvailable} ? 'Available' : 'Not Available'"></td>
                 <td><a th:href="@{/books/confirm/{id}(id = ${book.bookID})}"
                        class="btn btn-primary">Reserve</a></td>
             </tr>
@@ -76,6 +63,11 @@
     </div>
 </section>
 
+<script type="text/javascript">
+    function clearSearch(){
+        window.location= '/';
+    }
+</script>
 
 </body>
 </html>
