--- a/app/src/main/resources/templates/bookadded.html
+++ b/app/src/main/resources/templates/bookadded.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library Web</title>
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" th:href="@{style.css}" >
   </head>
 
   <body>
@@ -14,7 +14,7 @@
     <section class="header">
       <nav>
         <a href="index.html"
-          ><img src="../static/images/header.png" alt="Library Web" />
+          ><img src="/images/header.png" alt="Library Web" />
         </a>
 
         <div class="verticalLine">
