--- a/app/src/main/resources/templates/books.html
+++ b/app/src/main/resources/templates/books.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Library Web</title>
-    <link th:href="@{../static/style.css}" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{style.css}" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -16,7 +16,7 @@
 <section class="header">
     <nav>
         <a href="index.html"
-        ><img src="../static/images/header.png" alt="Library Web"/>
+        ><img src="/images/header.png" alt="Library Web"/>
         </a>
 
         <!--        <div class="verticalLine">-->
@@ -66,7 +66,7 @@
                 <!--                        </tr>-->
                 <!--                    </table>-->
                 <!--                </td>-->
-                <td th:text="${status_available} ? 'Available' : 'Not Available'"></td>
+                <td th:text="${book.statusAvailable} ? 'Available' : 'Not Available'"></td>
                 <td><a th:href="@{/books/confirm/{id}(id = ${book.bookID})}"
                        class="btn btn-primary">Reserve</a></td>
             </tr>
