--- a/app/src/main/resources/static/style.css
+++ b/app/src/main/resources/static/style.css
@@ -1,23 +1,35 @@
-*{
+* {
     margin: 0;
-    padding: 0;             
+    padding: 0;
 }
-body{
+
+body {
     background-color: #F5FCFF;
 }
 
-.hr_upper_page{
+.hr_upper_page {
     height: 45px;
     background-color: #96CCE7;
 }
 
 
-  a:link { text-decoration: none; }
-  a:visited { text-decoration: none; }
-  a:hover { text-decoration: none; }
-  a:active { text-decoration: none; }
+a:link {
+    text-decoration: none;
+}
 
-nav{
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
@@ -27,7 +39,7 @@ nav{
 }
 
 
-nav img{
+nav img {
     width: 250px;
 }
 
@@ -39,26 +51,26 @@ nav img{
 }
 
 
-.nav-links{
+.nav-links {
     flex: 1;
     text-align: right;
 }
 
-.nav-links ul li{
+.nav-links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
 
-.context img{
+.context img {
     position: absolute;
-    top:25%;
+    top: 25%;
     left: 5%;
     height: 60%;
 }
 
-.context div{
+.context div {
     position: absolute;
     top: 40%;
     right: 10%;
@@ -66,11 +78,11 @@ nav img{
     font-size: 200%;
 }
 
-.context div input{
+.context div input {
     font-size: 120%;
 }
 
-.footer{
+.footer {
     background-color: #4c4e4c;
     flex: 1;
     text-align: center;
@@ -79,25 +91,25 @@ nav img{
 }
 
 
-.footer ul li{
+.footer ul li {
     list-style: none;
     display: inline-block;
     padding: 10px 243px;
     position: relative;
 }
 
-.footer ul li p{
+.footer ul li p {
     color: white;
 }
 
-.searchNoResultPannel{
+.searchNoResultPannel {
     position: absolute;
     right: 40%;
     bottom: 57%;
     font-size: 23px;
 }
 
-.searchVerticalLine{
+.searchVerticalLine {
     height: 550px;
     border-right: 2px solid #00AAFF;
     position: absolute;
@@ -105,14 +117,14 @@ nav img{
     bottom: 10%;
 }
 
-.searchResultHeader{
+.searchResultHeader {
     font-size: 40px;
     position: absolute;
     left: 6%;
     top: 23%;
 }
 
-.bookAddedPannel{
+.bookAddedPannel {
     font-size: 23px;
     position: absolute;
     right: 59%;
@@ -120,52 +132,52 @@ nav img{
 }
 
 
-.card-body h2{
+.card-body h2 {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
 
-.card{
+.card {
     width: 30%;
     display: inline-block;
     box-shadow: 2px 2px 20px black;
-    border-radius: 5px; 
+    border-radius: 5px;
     margin: 5%;
-   }
-
-.image img{
- width: 100%;
- border-top-right-radius: 5px;
- border-top-left-radius: 5px;
 }
 
-.title{
-
- text-align: center;
- padding: 10px;
- 
+.image img {
+    width: 100%;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
-.des{
+.title {
+
+    text-align: center;
+    padding: 10px;
+
+}
+
+.des {
     padding: 3px;
     text-align: center;
-   
+
     padding-top: 10px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-  }
+}
 
-  .card{
+.card {
     position: absolute;
     left: 14%;
-  }
+}
 
-  .available{
+.available {
     background-color: lightgreen;
-  }
+}
 
-  .notavailable{
+.notavailable {
     background-color: lightcoral;
-  }
+}
