--- a/app/src/main/resources/templates/search.html
+++ b/app/src/main/resources/templates/search.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Library Web</title>
-    <link rel="stylesheet" th:href="@{/static/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -15,14 +15,14 @@
 
 <section class="header">
     <nav>
-        <a href="index.html">
+        <a th:href="@{/}">
             <img src="/images/header.png" alt="Library Web"/>
         </a>
 
         <div class="nav-links">
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="history.html">HISTORY</a></li>
+                <li><a th:href="@{/}">HOME</a></li>
+                <li><a th:href="@{/history}">HISTORY</a></li>
             </ul>
         </div>
     </nav>
@@ -40,7 +40,6 @@
             <tr>
                 <th> Title</th>
                 <th> Description</th>
-                <!--                <th> Authors </th>-->
                 <th> Status</th>
                 <th> Actions</th>
             </tr>
