--- a/app/src/main/resources/templates/books.html
+++ b/app/src/main/resources/templates/books.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Library Web</title>
-    <link rel="stylesheet" type="text/css" th:href="@{style.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -41,11 +41,10 @@
         <table class="table table-bordered">
             <thead class="table-dark">
             <tr>
-                <th> Title </th>
-                <th> Description </th>
-                <!--                <th> Authors </th>-->
-                <th> Status </th>
-                <th> Actions </th>
+                <th> Title</th>
+                <th> Description</th>
+                <th> Status</th>
+                <th> Action</th>
             </tr>
             </thead>
 
@@ -56,19 +55,13 @@
             <tr th:each="book: ${books}">
                 <td th:text="${book.title}"></td>
                 <td th:text="${book.description}"></td>
-                <!--                <td>-->
-                <!--                    <table>-->
-                <!--                        <tr>-->
-                <!--                            <th> Name </th>-->
-                <!--                        </tr>-->
-                <!--                        <tr th:each="author: ${book.authors}">-->
-                <!--                            <td th:text="${author.firstName}"></td>-->
-                <!--                        </tr>-->
-                <!--                    </table>-->
-                <!--                </td>-->
                 <td th:text="${book.statusAvailable} ? 'Available' : 'Not Available'"></td>
                 <td><a th:href="@{/books/confirm/{id}(id = ${book.bookID})}"
-                       class="btn btn-primary">Reserve</a></td>
+                       class="btn btn-success">Reserve</a>
+                    <a th:href="@{/books/update/{id}(id = ${book.bookID})}"
+                       class="btn btn-warning">Update</a>
+                </td>
+
             </tr>
             </tbody>
         </table>
