--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
             <ul>
                 <li><a th:href="@{/}">HOME</a></li>
                 <li><a th:href="@{/history}">HISTORY</a></li>
+                <li><a th:href="@{/books/new}">NEW BOOK</a></li>
             </ul>
         </div>
     </nav>
@@ -41,13 +42,6 @@
             never reads lives only one.” George R.R. Martin
         </p>
         <input type="button" value="All Books" onclick="AllBooks()">
-        <!--        <input type="Search" />-->
-        <!--        <a href="books.html">-->
-        <!--          <button type="button" class="btn btn-outline-primary">-->
-        <!--            Search-->
-        <!--          </button></a-->
-        <!--        >-->
-
         <div>&nbsp;</div>
 
         <form th:action="@{/books/search}">
