Final Push Before Presentation

--- a/app/src/main/resources/templates/history.html
+++ b/app/src/main/resources/templates/history.html
@@ -32,7 +32,7 @@
 
     <div class="container">
         <div class="row">
-            <h1> Books </h1>
+            <h1> Reservations </h1>
         </div>
         <table class="table table-bordered">
             <thead class="table-dark">
